Added more of the microkernals to the wasm build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8129,7 +8129,7 @@ IF(XNNPACK_TARGET_PROCESSOR MATCHES "^riscv(32|64)$")
   LIST(APPEND PROD_MICROKERNEL_SRCS ${PROD_SCALAR_RISCV_MICROKERNEL_SRCS})
 ENDIF()
 IF(CMAKE_SYSTEM_NAME EQUAL "Emscripten")
-  LIST(APPEND PROD_MICROKERNEL_SRCS ${PROD_SCALAR_WASM_MICROKERNEL_SRCS})
+  LIST(APPEND PROD_MICROKERNEL_SRCS ${ALL_WASM_MICROKERNEL_SRCS} ${PROD_SCALAR_WASM_MICROKERNEL_SRCS})
   LIST(APPEND ALL_MICROKERNEL_SRCS ${ALL_WASM_MICROKERNEL_SRCS})
   IF(XNNPACK_ENABLE_ASSEMBLY)
     LIST(APPEND ALL_MICROKERNEL_SRCS ${WASM32_ASM_MICROKERNEL_SRCS})
