Update cpuinfo dependency Fix to Emscripten build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8128,7 +8128,7 @@ ENDIF()
 IF(XNNPACK_TARGET_PROCESSOR MATCHES "^riscv(32|64)$")
   LIST(APPEND PROD_MICROKERNEL_SRCS ${PROD_SCALAR_RISCV_MICROKERNEL_SRCS})
 ENDIF()
-IF(CMAKE_SYSTEM_NAME EQUAL "Emscripten")
+IF(CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
   LIST(APPEND PROD_MICROKERNEL_SRCS ${ALL_WASM_MICROKERNEL_SRCS} ${PROD_SCALAR_WASM_MICROKERNEL_SRCS})
   LIST(APPEND ALL_MICROKERNEL_SRCS ${ALL_WASM_MICROKERNEL_SRCS})
   IF(XNNPACK_ENABLE_ASSEMBLY)
