Add WASMSIMD to prod microkernel srcs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8135,6 +8135,7 @@ IF(CMAKE_SYSTEM_NAME STREQUAL "Emscripten")
     LIST(APPEND ALL_MICROKERNEL_SRCS ${WASM32_ASM_MICROKERNEL_SRCS})
   ENDIF()
   IF(CMAKE_C_FLAGS MATCHES "-msimd128")
+    LIST(APPEND PROD_MICROKERNEL_SRCS ${ALL_WASMSIMD_MICROKERNEL_SRCS})
     LIST(APPEND ALL_MICROKERNEL_SRCS ${ALL_WASMSIMD_MICROKERNEL_SRCS})
   ENDIF()
 ENDIF()
